cmake_minimum_required(VERSION 3.0.0)
project(mptest VERSION 0.1.0)
set(SOURCES mptest_aparse.c mptest_fuzz.c mptest_leakcheck.c mptest_longjmp.c mptest_state.c mptest_sym.c mptest_time.c _cpack/impl.c)
set(TEST_SOURCES )
set(ANY_OPTS "-Wall" "-Werror" "-Wextra" "-Wshadow" "-Wconversion" "-Wstrict-prototypes" "-Wuninitialized" "-Wpedantic" "--std=c89")
set(DEBUG_OPTS "-g" "-O0")
set(RELEASE_OPTS "-O3")
add_executable(mptest_tests ${SOURCES} ${TEST_SOURCES})
target_compile_definitions(mptest_tests PUBLIC MN__SPLIT_BUILD MN_DEBUG)
target_compile_options(mptest_tests PUBLIC "${ANY_OPTS}")
target_compile_options(mptest_tests PUBLIC "$<$<CONFIG:RELEASE>:${RELEASE_OPTS}>")
target_compile_options(mptest_tests PUBLIC "$<$<CONFIG:DEBUG>:${DEBUG_OPTS}>")
add_executable(mptest_fuzz ${SOURCES} ${FUZZ_SOURCES})
target_compile_definitions(mptest_fuzz PUBLIC MN__SPLIT_BUILD MN_DEBUG)
target_compile_options(mptest_fuzz PUBLIC "${ANY_OPTS}" "${FUZZ_OPTS}")
target_compile_options(mptest_fuzz PUBLIC "$<$<CONFIG:RELEASE>:${RELEASE_OPTS}>")
target_compile_options(mptest_fuzz PUBLIC "$<$<CONFIG:DEBUG>:${DEBUG_OPTS}>")
target_link_options(mptest_fuzz PUBLIC -fsanitize=fuzzer,address)